--- a/software/examples/javascript/ExampleLoopback.html
+++ b/software/examples/javascript/ExampleLoopback.html
@@ -48,7 +48,7 @@
                         rs232.enableReadCallback();
 
                         // Write "test" string
-                        rs232.write('test'.split()); // FIXME: only sends the 't'
+                        rs232.write('test'.split(''));
                     }
                 );
 
