examples: Remove unnecessary length printing

--- a/software/examples/javascript/ExampleLoopback.html
+++ b/software/examples/javascript/ExampleLoopback.html
@@ -58,7 +58,7 @@
                     function (message) {
                         // Assume that the message consists of ASCII characters and
                         // convert it from an array of chars to a string
-                        textArea.value += 'Message (Length: ' + message.length + '): "' + message.join('') + '"\n';
+                        textArea.value += 'Message: "' + message.join('') + '"\n';
                         textArea.scrollTop = textArea.scrollHeight;
                     }
                 );
