examples: Improve wording of comment

--- a/software/examples/javascript/ExampleLoopback.html
+++ b/software/examples/javascript/ExampleLoopback.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- For this example connect the RX pin to the TX pin on the same Bricklet -->
+<!-- For this example connect the RX1 and TX pin to receive the send message -->
 
 <html>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
